--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,21 @@ aggregator = { path = "src/aggregator" }
 bx_core = { path = "src/bx_core" }
 
 [dev-dependencies]
-candid = "0.9"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+candid = { workspace = true }
+tokio = { workspace = true }
 
 [workspace]
 members = ["src/bx_core", "src/aggregator"]
+
+[workspace.dependencies]
+async-trait = "=0.1.88"
+candid = "=0.9.11"
+ic-agent = "=0.26.1"
+ic-cdk = "=0.10.2"
+ic-cdk-macros = "=0.7.1"
+serde = { version = "=1.0.219", features = ["derive"] }
+serde_json = "=1.0.140"
+futures = "=0.3.31"
+tokio = { version = "=1.46.0", features = ["macros", "rt-multi-thread", "time"] }
+once_cell = "=1.19.0"
 
