--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -4,15 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-trait = "0.1"
-candid = "0.9"
-ic-agent = "0.26"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-ic-cdk = "0.10"
-ic-cdk-macros = "0.8"
-futures = "0.3"
+async-trait = { workspace = true }
+candid = { workspace = true }
+ic-agent = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+ic-cdk = { workspace = true }
+ic-cdk-macros = { workspace = true }
+futures = { workspace = true }
+tokio = { workspace = true }
+once_cell = "=1.19.0"
 bx_core = { path = "../bx_core" }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
