--- a/src/bx_core/Cargo.toml
+++ b/src/bx_core/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-candid = "0.9"
+serde = { workspace = true }
+candid = { workspace = true }
+
+[dev-dependencies]
+serde_json = { workspace = true }
