--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         toolchain: stable
         components: clippy
     - name: Install dfx
-      uses: dfinity/setup-dfx@v1
+      uses: dfinity/setup-dfx@main
     - name: Run Clippy
       run: cargo clippy -- -D warnings
     - name: Run Tests
