--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
       with:
         toolchain: stable
         components: clippy
+    - name: Add wasm target
+      run: rustup target add wasm32-unknown-unknown
     - name: Install dfx
       uses: dfinity/setup-dfx@main
     - name: Run Clippy
