--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,6 @@ ic-cdk-macros = "=0.7.1"
 serde = { version = "=1.0.219", features = ["derive"] }
 serde_json = "=1.0.140"
 futures = "=0.3.31"
-tokio = { version = "=1.46.0", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
 once_cell = "=1.19.0"
 
