--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ serde = { version = "=1.0.219", features = ["derive"] }
 serde_json = "=1.0.140"
 tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
 once_cell = "=1.19.0"
+futures = "=0.3.31"
