Make CI and docs run clippy quietly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dfx
       uses: dfinity/setup-dfx@main
     - name: Run Clippy
-      run: cargo clippy -- -D warnings
+      run: cargo clippy --quiet -- -D warnings
     - name: Run Tests
       run: cargo test --quiet --all
     - name: Integration (dfx)
