--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -14,6 +14,12 @@ futures = { workspace = true }
 tokio = { workspace = true }
 once_cell = "=1.19.0"
 bx_core = { path = "../bx_core" }
+dashmap = "5"
+toml = "0.8"
+ic-agent = { workspace = true }
+num-bigint = "0.4"
+num-traits = "0.2"
+num-integer = "0.1"
 
 [dev-dependencies]
 
