--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -11,9 +11,17 @@ serde_json = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 futures = { workspace = true }
-tokio = { workspace = true }
 once_cell = "=1.19.0"
 bx_core = { path = "../bx_core" }
+dashmap = "5"
+toml = "0.8"
+num-bigint = "0.4"
+num-traits = "0.2"
+num-integer = "0.1"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { workspace = true }
+ic-agent = { workspace = true }
 
 [dev-dependencies]
 
