--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -18,6 +18,7 @@ toml = "0.8"
 num-bigint = "0.4"
 num-traits = "0.2"
 num-integer = "0.1"
+sha2 = "0.10"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true }
