--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ candid = { workspace = true }
 tokio = { workspace = true }
 
 [workspace]
-members = ["src/bx_core", "src/aggregator", "src/aggregator_canister"]
+members = ["src/bx_core", "src/aggregator", "src/aggregator_canister", "src/mock_ledger_canister"]
 
 [workspace.dependencies]
 async-trait = "=0.1.88"
