--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ candid = { workspace = true }
 tokio = { workspace = true }
 tempfile = "3"
 aggregator = { path = "src/aggregator", features = ["live-test"] }
+ic-agent = { workspace = true }
 
 [workspace]
 members = ["src/bx_core", "src/aggregator", "src/aggregator_canister", "src/mock_ledger_canister"]
