--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,4 +36,5 @@ serde_json = "=1.0.140"
 futures = "=0.3.31"
 tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
 once_cell = "=1.19.0"
+ic-cdk-timers = "=0.4.0"
 
