--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -20,6 +20,7 @@ num-bigint = "0.4"
 num-traits = "0.2"
 num-integer = "0.1"
 sha2 = "0.10"
+ic-cdk-timers = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true }
