--- a/src/mock_sonic_canister/Cargo.toml
+++ b/src/mock_sonic_canister/Cargo.toml
@@ -8,6 +8,7 @@ candid = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 serde = { workspace = true }
+once_cell = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
