--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -22,14 +22,15 @@ num-integer = "0.1"
 sha2 = "0.10"
 ic-cdk-timers = { workspace = true }
 
+[dev-dependencies]
+quickcheck = "1"
+quickcheck_macros = "1"
+tokio = { workspace = true }
+once_cell = { workspace = true }
+
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true }
 ic-agent = { workspace = true }
-
-[dev-dependencies]
-
-tokio = { workspace = true }
-once_cell = { workspace = true }
 
 [features]
 live-test = []
