Cleanup warnings and document features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ ic-agent = { workspace = true }
 quickcheck = "1"
 quickcheck_macros = "1"
 
+[features]
+claim = []
+
 [workspace]
 members = [
     "src/bx_core",
