--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,24 @@ bx_core = { path = "src/bx_core" }
 candid = { workspace = true }
 tokio = { workspace = true }
 tempfile = "3"
-aggregator = { path = "src/aggregator", features = ["live-test"] }
+aggregator = { path = "src/aggregator", features = ["live-test", "claim"] }
 ic-agent = { workspace = true }
+quickcheck = "1"
+quickcheck_macros = "1"
+
+[features]
+claim = []
 
 [workspace]
-members = ["src/bx_core", "src/aggregator", "src/aggregator_canister", "src/mock_ledger_canister"]
+members = [
+    "src/bx_core",
+    "src/aggregator",
+    "src/aggregator_canister",
+    "src/mock_ledger_canister",
+    "src/mock_icpswap_canister",
+    "src/mock_sonic_canister",
+    "src/mock_infinity_canister",
+]
 
 [workspace.dependencies]
 async-trait = "=0.1.88"
@@ -28,4 +41,5 @@ serde_json = "=1.0.140"
 futures = "=0.3.31"
 tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
 once_cell = "=1.19.0"
+ic-cdk-timers = "=0.4.0"
 
