--- a/src/mock_ledger_canister/Cargo.toml
+++ b/src/mock_ledger_canister/Cargo.toml
@@ -8,6 +8,8 @@ candid = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
 serde = { workspace = true }
+once_cell = { workspace = true }
+num-traits = "0.2"
 
 [lib]
 crate-type = ["cdylib"]
