--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,5 @@ futures = "=0.3.31"
 tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
 once_cell = "=1.19.0"
 ic-cdk-timers = "=0.4.0"
+num-traits = "=0.2.19"
 
