--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
       run: rustup target add wasm32-unknown-unknown
     - name: Install dfx
       uses: dfinity/setup-dfx@main
+    - name: Prepare dfx identity
+      run: |
+        dfx identity new default --force --storage-mode plaintext >/dev/null 2>&1
+        dfx identity use default
     - name: Run Clippy
       run: cargo clippy --quiet -- -D warnings
     - name: Run Tests
