Add DEX fallbacks and env helper

--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -21,6 +21,7 @@ num-traits = "0.2"
 num-integer = "0.1"
 sha2 = "0.10"
 ic-cdk-timers = { workspace = true }
+tracing = { workspace = true }
 
 [dev-dependencies]
 quickcheck = "1"
