--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,4 +43,5 @@ tokio = { version = "=1.46.0", features = ["macros", "rt", "time"] }
 once_cell = "=1.19.0"
 ic-cdk-timers = "=0.4.0"
 num-traits = "=0.2.19"
+tracing = "=0.1.41"
 
