--- a/config/ledgers.toml
+++ b/config/ledgers.toml
@@ -1,2 +1,9 @@
 [ledgers]
 ICP = "rwlgt-iiaaa-aaaaa-aaaaa-cai"
+
+[dex]
+# Fallback SNS canister IDs used when environment variables are not set.
+# These are queried by the DEX adapters during local development.
+ICPSWAP_FACTORY = "oh4fn-kyaaa-aaaaq-aaega-cai"
+SONIC_ROUTER = "xjngq-yaaaa-aaaaq-aabha-cai"
+INFINITY_VAULT = "pnthx-iiaaa-aaaaq-aaeba-cai"
