--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -22,6 +22,7 @@ num-integer = "0.1"
 sha2 = "0.10"
 ic-cdk-timers = { workspace = true }
 tracing = { workspace = true }
+notify = { workspace = true }
 
 [dev-dependencies]
 quickcheck = "1"
@@ -32,6 +33,7 @@ once_cell = { workspace = true }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true }
 ic-agent = { workspace = true }
+notify = { workspace = true }
 
 [features]
 live-test = []
