--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ aggregator = { path = "src/aggregator", features = ["live-test", "claim"] }
 ic-agent = { workspace = true }
 quickcheck = "1"
 quickcheck_macros = "1"
+serde = { workspace = true }
 
 [features]
 claim = []
