--- a/src/aggregator_canister/Cargo.toml
+++ b/src/aggregator_canister/Cargo.toml
@@ -2,6 +2,7 @@
 name = "aggregator_canister"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 aggregator = { path = "../aggregator" }
@@ -10,3 +11,6 @@ ic-cdk-macros = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
+
+[build-dependencies]
+chrono = { workspace = true }
