--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 [dependencies]
 aggregator = { path = "src/aggregator" }
 bx_core = { path = "src/bx_core" }
+anyhow = "1"
+candid = { workspace = true }
+serde = { workspace = true }
+tokio = { workspace = true, features = ["macros", "rt"] }
+ic-agent = { workspace = true }
+num-traits = { workspace = true }
 
 [dev-dependencies]
 candid = { workspace = true }
