--- a/src/aggregator_canister/Cargo.toml
+++ b/src/aggregator_canister/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 aggregator = { path = "../aggregator" }
 ic-cdk = { workspace = true }
 ic-cdk-macros = { workspace = true }
+candid = { workspace = true }
 
 [features]
 export_candid = ["ic-cdk/wasi"]
