Export claim API

--- a/src/aggregator_canister/Cargo.toml
+++ b/src/aggregator_canister/Cargo.toml
@@ -12,6 +12,7 @@ candid = { workspace = true }
 
 [features]
 export_candid = ["ic-cdk/wasi"]
+claim = ["aggregator/claim"]
 
 [lib]
 crate-type = ["cdylib"]
