--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ once_cell = "=1.19.0"
 ic-cdk-timers = "=0.4.0"
 num-traits = "=0.2.19"
 tracing = "=0.1.41"
+tracing-subscriber = "=0.3.18"
 notify = "=6.1.1"
 chrono = "=0.4.41"
 
