--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -22,6 +22,7 @@ num-integer = "0.1"
 sha2 = "0.10"
 ic-cdk-timers = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 notify = { workspace = true }
 serde_cbor = "0.11"
 ic-certified-map = "0.4"
