--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -33,6 +33,7 @@ quickcheck = "1"
 quickcheck_macros = "1"
 tokio = { workspace = true }
 once_cell = { workspace = true }
+tempfile = "3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { workspace = true }
