docs: add dependency map and tidy manifests

--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -26,13 +26,12 @@ tracing-subscriber = { workspace = true }
 notify = { workspace = true }
 serde_cbor = "0.11"
 ic-certified-map = "0.4"
-serde_bytes = "0.11"
+serde_bytes = { workspace = true }
 
 [dev-dependencies]
 quickcheck = "1"
 quickcheck_macros = "1"
 tokio = { workspace = true }
-once_cell = { workspace = true }
 tempfile = "3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
