--- a/config/ledgers.toml
+++ b/config/ledgers.toml
@@ -8,9 +8,11 @@ ICPSWAP_FACTORY = "oh4fn-kyaaa-aaaaq-aaega-cai"
 SONIC_ROUTER = "xjngq-yaaaa-aaaaq-aabha-cai"
 INFINITY_VAULT = "pnthx-iiaaa-aaaaq-aaeba-cai"
 SNS_DISTRIBUTOR = "rkp4c-7iaaa-aaaaa-aaaca-cai"
+SNS_TEST = "br5c2-xyaaa-aaaaa-aaaac-cai"
 
 [dex_controllers]
 ICPSWAP_FACTORY = "aaaaa-aa"
 SONIC_ROUTER = "aaaaa-aa"
 INFINITY_VAULT = "aaaaa-aa"
 SNS_DISTRIBUTOR = "aaaaa-aa"
+SNS_TEST = "aaaaa-aa"
