--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "src/bx_core",
     "src/aggregator",
     "src/aggregator_canister",
+    "src/cli",
     "src/mock_ledger_canister",
     "src/mock_icpswap_canister",
     "src/mock_sonic_canister",
@@ -55,4 +56,6 @@ tracing-subscriber = "=0.3.18"
 notify = "=6.1.1"
 chrono = "=0.4.41"
 serde_bytes = "=0.11.17"
+async-graphql = "=6.0.11"
+clap = { version = "=4.5.4", features = ["derive"] }
 
