--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ic-agent = { workspace = true }
 quickcheck = "1"
 quickcheck_macros = "1"
 serde = { workspace = true }
+serde_json = { workspace = true }
 
 [features]
 claim = []
