--- a/src/aggregator_canister/Cargo.toml
+++ b/src/aggregator_canister/Cargo.toml
@@ -14,6 +14,7 @@ serde = { workspace = true }
 serde_bytes = { workspace = true }
 async-graphql = { workspace = true }
 once_cell = { workspace = true }
+bx_core = { path = "../bx_core" }
 
 [features]
 export_candid = ["ic-cdk/wasi"]
