--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -27,6 +27,7 @@ notify = { workspace = true }
 serde_cbor = "0.11"
 ic-certified-map = "0.4"
 serde_bytes = { workspace = true }
+rust_decimal = "1"
 
 [dev-dependencies]
 quickcheck = "1"
