--- a/src/aggregator_canister/Cargo.toml
+++ b/src/aggregator_canister/Cargo.toml
@@ -32,3 +32,4 @@ chrono = { workspace = true }
 bx_core = { path = "../bx_core" }
 tokio = { workspace = true }
 serial_test = "2"
+rust_decimal = "1"
