Fix adapter timeout test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ quickcheck = "1"
 quickcheck_macros = "1"
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_bytes = { workspace = true }
 
 [features]
 claim = []
