--- a/src/aggregator/Cargo.toml
+++ b/src/aggregator/Cargo.toml
@@ -28,6 +28,7 @@ serde_cbor = "0.11"
 ic-certified-map = "0.4"
 serde_bytes = { workspace = true }
 rust_decimal = "1"
+lazy_static = "1"
 
 [dev-dependencies]
 quickcheck = "1"
