Update CI for update call and regenerate candid

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
         dfx start --background --clean
         trap 'dfx stop' EXIT
         dfx deploy
-        # Query the read-only method using the generated Candid interface
+        # Call the update method using the generated Candid interface
         dfx canister call aggregator get_holdings '(principal "aaaaa-aa")' \
-          --candid candid/aggregator.did --query
+          --candid candid/aggregator.did --update
     - name: Deploy to test net
       run: ./deploy.sh
 
